--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -2,10 +2,9 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    height:50vh;
+    height:80%;
     position: fixed;
     right: .8rem;
-    top: 9rem;
 }
 
 .floating-btn{
