--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,5 +1,5 @@
 .body{
-    min-height: 80vh;
+    min-height: 85vh;
     align-items: center;
     justify-content: center;
     margin: 2rem;
